2007-04-06  Matthew Barnes  <mbarnes@redhat.com>

	* message-list.c: More intelligent message selection.  (#332765)
	Patch from Christof Krüger

2007-04-06  Matthew Barnes  <mbarnes@redhat.com>

	* mail-session.c (main_system_beep): Unref 'session'.  (#424795)
	Patch from Karl Relton

2007-04-05  Matthew Barnes  <mbarnes@redhat.com>

	* mail-send-recv.c (refresh_folders_get):
	Provide a CamelException to camel_folder_refresh_info().

2007-04-04  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-tree.c (emft_model_row_changed):
	Update parent rows when a child row changes.  (#352713)
	Patch by René Stadler.

2007-04-03  Srinivasa Ragavan  <sragavan@novell.com>

	* em-migrate.c: (emm_setup_initial): Fix for evolution on crashing
	while setting up the first account.

2007-04-03  Matthew Barnes  <mbarnes@redhat.com>

	* em-event.h: Don't #include <composer/e-msg-composer.h> since we
	don't install that file.  Doing so prevents third-party applications
	like mail-notification from building. (#400241)

2007-04-03  Srinivasa Ragavan  <sragavan@novell.com>

	Reworked the SPAM plugins with more UI options and support for
	multiple plugins.

	* em-folder-view.c:
	* em-junk-hook.c: (emjh_construct_item), (emjh_construct):
	* em-junk-hook.h:
	* em-mailer-prefs.c: (junk_days_activate), (emmp_empty_junk_init),
	(junk_plugin_changed), (junk_plugin_setup),
	(create_combo_text_widget), (em_mailer_prefs_construct):
	* em-mailer-prefs.h:
	* evolution-mail.schemas.in.in:
	* mail-component.c: (impl_createView), (mc_quit_delete),
	(impl_quit):
	* mail-config.glade:
	* mail-session.c: (init), (mail_session_add_junk_plugin),
	(mail_session_get_junk_plugins):
	* mail-session.h:

2007-04-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #411331

	* em-folder-browser.c: (emfb_gui_folder_changed): Fix the message
	selection.

2007-04-03  Matthew Barnes  <mbarnes@redhat.com>

	* evolution-mail.schemas.in.in:
	Correctly capitalize SpamAssassin.  (#375577)
	Patch from Priit Laes.
